--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -11,11 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       -name: Azure Login
-      -uses: Azure/login@v1
+      uses: Azure/login@v1
       with:
         creds: ${{ secrets.Azure_credentials }}
 
