--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -16,6 +16,6 @@ jobs:
       -name: Azure Login
       uses: Azure/login@v1
       with:
-        creds: ${{ secrets.Azure_credentials }}
+        creds: ${{ secrets.Azure_Credentials}}
 
   
