--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      -name: Azure Login
+      -name: "Azure Login"
       uses: Azure/login@v1
       with:
         creds: ${{ secrets.Azure_Credentials}}
