--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -3,6 +3,9 @@
 name: armTempateDeployment
 
 on:
+  push:
+    branches:
+      - main
 
   workflow_dispatch:
 
@@ -18,4 +21,10 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+          - name: Deploy Resource Group rg-githubactions with AZ CLI
+            uses: Azure/cli@v1.0.8
+            with:
+              inlinescript: |
+                az deployment sub create --location "eastus" --template-file ./arm-templates/resouregroup.json
+      
   
