--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -21,10 +21,14 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy Resource Group rg-githubactions with AZ CLI
-        uses: Azure/cli@v1.0.8
+      - name: Deploy resource group rg-githubactions
+        uses: Azure/arm-deploy@v1.0.9
         with:
-              inlinescript: |
-                az deployment sub create --location "eastus" --template-file ./arm-templates/resourcegroup.json
+          scope: subscription
+          subscriptionId: e693c25d-601a-4c2c-b613-2c26a18f489b
+          region: Eastus
+          template: ./arm-templates/resourcegroup.json
+          deploymentName: rg-githubactions
+      
       
   
