--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -38,7 +38,9 @@ jobs:
           subscriptionId: e693c25d-601a-4c2c-b613-2c26a18f489b
           template: ./arm-templates/storageaccount.json
           parameters: 
-            ./arm-templates/storageaccount.parameters.json storageAccountName= "globostg003drt" location= "west us"
+            ./arm-templates/storageaccount.parameters.json 
+            storageAccountName=globostg003drt 
+            location= "west us"
           deploymentMode: incremental
       
   
