--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -28,19 +28,25 @@ jobs:
           subscriptionId: e693c25d-601a-4c2c-b613-2c26a18f489b
           region: Eastus
           template: ./arm-templates/resourcegroup.json
+          parameters:
+            location="East US"
+            resourceGroupName=rg-githubactions
           deploymentName: rg-githubactions
       
       - name: Deploy Storage Account
         uses: Azure/arm-deploy@v1.0.9
+        id: storageAccountDeploy
         with:
           scope: resourcegroup
           resourceGroupName: rg-githubactions
           subscriptionId: e693c25d-601a-4c2c-b613-2c26a18f489b
           template: ./arm-templates/storageaccount.json
           parameters: 
-            ./arm-templates/storageaccount.parameters.json 
+            sku=Standard_LRS
             storageAccountName=globostg003drt 
             location="west us"
           deploymentMode: incremental
+
+          run: echo ${{steps.storageAccountDeploy.outputs.BlobUri}}
       
   
