--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -47,6 +47,16 @@ jobs:
             location="west us"
           deploymentMode: incremental
 
-      - run: echo ${{ steps.storageAccountDeploy.outputs.BlobUri }}
+      - name: Deploy Virtual Machine
+        uses: Azure/arm-deploy@v1.0.9
+        with:
+            scope: resourcegroup
+            resourceGroupName: rg-githubactions
+            subscriptionId: e693c25d-601a-4c2c-b613-2c26a18f489b
+            template: ./arm-templates/virtualmachine.json
+            parameters: 
+              adminpassword="My$ecurePassw@rd!"
+            deploymentMode: incremental
+
       
   
