add virtual machine with var2

--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   resource_group_name: rg-githubactions
-  location: eastus
+  location: "East US"
   subscriptionId: e693c25d-601a-4c2c-b613-2c26a18f489b
 jobs:
   ArmDeploy:
@@ -30,7 +30,7 @@ jobs:
         with:
           scope: subscription
           subscriptionId: ${{ env.subscriptionId }}
-          region: Eastus
+          region: eastus
           template: ./arm-templates/resourcegroup.json
           parameters:
             location= ${{ env.location }}
